--- a/config/database.yml
+++ b/config/database.yml
@@ -32,7 +32,7 @@ test:
   host: localhost
 
 production:
-  adapter: mysql
+  adapter: postgresql
   encoding: utf8
   reconnect: false
   database: blogkyoir_production
