--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,9 @@ development:
   encoding: unicode
   database: iverlandth_development
   pool: 5
-  username: iverlandth
-  password:
+  username: postgres
+  password: root
+  host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -48,8 +49,8 @@ test:
   encoding: unicode
   database: iverlandth_test
   pool: 5
-  username: iverlandth
-  password:
+  username: postgres
+  password: root
 
 production:
   adapter: postgresql
