update page 25 de sept

--- a/test/fixtures/contacts.yml
+++ b/test/fixtures/contacts.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
   name: MyString
-  content: MyText
+  email: MyString
+  message: MyText
 
 two:
-  title: MyString
   name: MyString
-  content: MyText
+  email: MyString
+  message: MyText
